--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,13 +1,17 @@
 :root {
 	// base
 	--font-family: "Golos Text", sans-serif;
-	--content-width: 1300px;
+	--content-width: 1000px;
 	--container-offset: 15px;
 	--container-width: calc(var(--content-width) + (var(--container-offset) * 2));
 
 	// colors
 	--white-color: #fff;
 	--black-color: #1e1e1e;
-	--hero-border-color: rgba(20, 38, 71, 0.2);
-	--dark-blue-color: #126797;
+	--darkest-blue-color: #142647;
+	--darker-blue-color: #126797;
+	--blue-color: #0bbbef;
+	--grey-color: #f7f7f7;
+	--dark-grey-color: #e9e9e9;
+	--salary-column-color: #2175c2;
 }
