--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,2 +1,260 @@
 .hero {
+	padding-top: 50px;
+	&__container {
+		&-item {
+			display: flex;
+			border-radius: 25px;
+			background: var(--grey-color);
+			padding: 20px 20px 30px 28px;
+			min-height: 270px;
+		}
+		&-buttons {
+			width: 100%;
+			display: flex;
+			justify-content: flex-end;
+			gap: 20px;
+			margin-top: 25px;
+		}
+		&-tooltip {
+			position: absolute;
+			z-index: 200;
+			top: -115px;
+			left: 50%;
+			transform: translateX(-50%);
+			padding-bottom: 27px;
+			opacity: 0;
+			visibility: hidden;
+			transition: opacity 0.3s ease, visibility 0.3s ease;
+			&-inner {
+				padding: 8px 6px 8px 7px;
+				background: var(--blue-color);
+				border-radius: 5px;
+			}
+		}
+	}
+	&__list {
+		margin-top: 20px;
+	}
+	&__item {
+		&-inner {
+			display: flex;
+			justify-content: space-between;
+			gap: 8px;
+			max-width: 786px;
+			width: 100%;
+		}
+	}
+	&__title {
+		color: var(--black-color);
+		font-size: 48px;
+		font-weight: 700;
+		&-candidates {
+			font-size: 48px;
+			font-weight: 600;
+			white-space: nowrap;
+			&-new {
+				color: var(--white-color);
+			}
+			&-active {
+				color: var(--darkest-blue-color);
+			}
+			&-all {
+				color: var(--darkest-blue-color);
+				font-size: 32px;
+				font-style: normal;
+				font-weight: 400;
+				line-height: normal;
+				letter-spacing: -1.6px;
+				opacity: 0.4;
+				margin-left: 5px;
+			}
+			&-center {
+				text-align: center;
+			}
+		}
+		&-graph {
+			color: var(--darkest-blue-color);
+			font-size: 32px;
+			font-weight: 400;
+			letter-spacing: -1.6px;
+			&-value {
+				color: var(--darkest-blue-color);
+				font-size: 48px;
+				font-weight: 600;
+				line-height: normal;
+				letter-spacing: unset;
+				margin-right: 6px;
+			}
+		}
+		&-interview {
+			color: var(--blue-color);
+			text-align: center;
+			font-size: 98px;
+			font-style: normal;
+			font-weight: 600;
+			line-height: normal;
+		}
+		&-tooltip {
+			color: var(--darkest-blue-color);
+			font-size: 20px;
+			font-weight: 600;
+			line-height: 24px;
+			text-align: center;
+			white-space: nowrap;
+			&-light {
+				color: var(--blue-color);
+			}
+		}
+	}
+	&__subtitle {
+		color: var(--black-color);
+		text-align: center;
+		font-family: "Montserrat";
+		font-size: 12px;
+		font-style: normal;
+		font-weight: 400;
+		&-graph {
+			text-align: left;
+			font-size: 14px;
+		}
+		&-interview {
+			color: var(--black-color);
+			font-size: 18px;
+		}
+		&-tooltip {
+			font-family: var(--font-family);
+			font-size: 9px;
+			line-height: 11px;
+			color: var(--salary-column-color);
+			white-space: nowrap;
+		}
+	}
+	&__candidates {
+		margin-top: 10px;
+		border-radius: 22px;
+		background: var(--blue-color);
+		padding: 21px 17px 21px 22px;
+		max-width: 250px;
+		min-width: 175px;
+		width: fit-content;
+		display: flex;
+		flex-direction: column;
+		row-gap: 30px;
+	}
+	&__age {
+		margin-top: 16px;
+	}
+	&__salary {
+		margin-top: 16px;
+		& .hero__bar {
+			background: var(--salary-column-color);
+		}
+	}
+	&__graph {
+		border-radius: 10px;
+		border-top-left-radius: 20px;
+		border-top-right-radius: 20px;
+		background: var(--dark-grey-color);
+		display: flex;
+		align-items: flex-end;
+		gap: 10px;
+		max-height: 105px;
+		height: 100%;
+		padding: 0 10px;
+		// overflow: hidden;
+		margin-top: 26px;
+		max-width: 250px;
+		width: 250px;
+	}
+	&__column {
+		position: relative;
+		min-height: 3%;
+		width: 100%;
+		&:hover {
+			& .hero__container-tooltip {
+				opacity: 1;
+				visibility: visible;
+			}
+		}
+	}
+	&__bar {
+		border-radius: 5px 5px 0px 0px;
+		background: var(--darker-blue-color);
+		width: inherit;
+		height: 100%;
+	}
+	&__text {
+		&-persentage {
+			color: var(--black-color);
+			text-align: center;
+			font-size: 10px;
+			position: absolute;
+			top: -14px;
+			left: 0;
+			right: 0;
+		}
+		&-dash {
+			width: 6.5px;
+			position: relative;
+			margin-left: 3px;
+			margin-right: 3px;
+			&::after {
+				content: "";
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				width: 6.5px;
+				height: 1.7px;
+				background: var(--darker-blue-color);
+			}
+		}
+	}
+	&__interview {
+		margin-left: 12px;
+		max-width: 184px;
+	}
+	&__period {
+		display: flex;
+		max-width: 184px;
+		padding: 6px 7px 6px 8px;
+		border-radius: 10px;
+		background: var(--dark-grey-color);
+		justify-content: space-between;
+		margin-bottom: 14px;
+	}
+	&__input {
+		&-text {
+			background: var(--dark-grey-color);
+			border: 0;
+			color: var(--darker-blue-color);
+			font-size: 14px;
+			font-style: normal;
+			font-weight: 400;
+			line-height: normal;
+			width: 79px;
+			cursor: pointer;
+			outline: none;
+			padding: 0;
+			text-align: center;
+		}
+	}
+	&__tooltip {
+		position: relative;
+		z-index: 100;
+		padding: 9px 7px 8px 9px;
+		background: var(--darkest-blue-color);
+		border-radius: 10px;
+		display: flex;
+		align-items: center;
+		gap: 7px;
+	}
+	&__icon {
+		&-triangle {
+			position: absolute;
+			bottom: 8px;
+			left: 50%;
+			transform: translateX(-50%);
+		}
+	}
 }
