--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,5 +5,6 @@
 @import "settings";
 
 // подключения компонентов страницы
+@import "./components/datepicker";
 @import "./components/header";
 @import "./components/hero";
