--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,63 +1,7 @@
 <section class="hero">
 	<div class="container hero__container">
 		<h1 class="hero__title">Аналитика кандидатов</h1>
-		<ul class="list-reset hero__list">
-			<li class="hero__item">
-				<div class="hero__container-item">
-					<div class="hero__item-inner">
-						<div class="hero__candidates">
-							<div class="hero__row">
-								<h2 class="hero__title-candidates hero__title-candidates-new"></h2>
-								<h4 class="hero__subtitle">новых кандидатов</h4>
-							</div>
-							<div class="hero__row">
-								<h2 class="hero__title-candidates hero__title-candidates-center">
-									<span class="hero__title-candidates-active"></span
-									><span class="hero__title-candidates-all"></span>
-								</h2>
-								<h4 class="hero__subtitle">активных кандидатов</h4>
-							</div>
-						</div>
-						<div class="hero__age">
-							<h2 class="hero__title-graph">
-								<span class="hero__title-graph-value hero__title-graph-value-age"></span
-								><span class="hero__title-graph-countable"></span>
-							</h2>
-							<h4 class="hero__subtitle hero__subtitle-graph">средний возраст</h4>
-							<div class="hero__graph"></div>
-						</div>
-						<div class="hero__salary">
-							<h2 class="hero__title-graph">
-								<span class="hero__title-graph-value hero__title-graph-value-salary"></span>тыс.
-							</h2>
-							<h4 class="hero__subtitle hero__subtitle-graph">ожидания по ЗП</h4>
-							<div class="hero__graph"></div>
-						</div>
-					</div>
-					<div class="hero__interview">
-						<div class="hero__period" id="date_period">
-							<input
-								class="hero__input-text hero__input-text-start"
-								type="text"
-								id="start"
-								name="start"
-								readonly
-							/>
-							<span class="hero__text-dash"></span>
-							<input
-								class="hero__input-text hero__input-text-end"
-								type="text"
-								id="end"
-								name="end"
-								readonly
-							/>
-						</div>
-						<h3 class="hero__title-interview"></h3>
-						<h4 class="hero__subtitle hero__subtitle-interview">собеседования назначено</h4>
-					</div>
-				</div>
-			</li>
-		</ul>
+		<ul class="list-reset hero__list"></ul>
 		<div class="hero__container-buttons">
 			<button class="btn-reset hero__button hero__button-plus">
 				<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40" fill="none">
