--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -13,5 +13,6 @@
 	--blue-color: #0bbbef;
 	--grey-color: #f7f7f7;
 	--dark-grey-color: #e9e9e9;
+	--mark-color: #d9d9d9;
 	--salary-column-color: #2175c2;
 }
