--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -7,13 +7,32 @@
 			background: var(--grey-color);
 			padding: 20px 20px 30px 28px;
 			min-height: 270px;
+			position: relative;
+			// &-hidden {
+			// 	&::before {
+			// 		opacity: 0;
+			// 		visibility: hidden;
+			// 	}
+			// }
+			// &::before {
+			// 	content: "";
+			// 	position: absolute;
+			// 	border-radius: 25px;
+			// 	z-index: 100;
+			// 	inset: 0;
+			// 	background: rgb(21 21 21 / 90%);
+			// 	opacity: 1;
+			// 	visibility: visible;
+			// 	transition: visibility 0.3s ease, opacity 0.3s ease;
+			// 	filter: blur(2px);
+			// }
 		}
 		&-buttons {
 			width: 100%;
 			display: flex;
 			justify-content: flex-end;
 			gap: 20px;
-			margin-top: 25px;
+			margin: 25px 0;
 		}
 		&-tooltip {
 			position: absolute;
@@ -31,9 +50,38 @@
 				border-radius: 5px;
 			}
 		}
+		&-vacancies {
+			width: 100%;
+			display: flex;
+			justify-content: flex-end;
+			margin-bottom: 26px;
+		}
 	}
 	&__list {
-		margin-top: 20px;
+		// margin-top: 20px;
+		margin-top: -53px; /* что бы блок "должность" был на уровне с заголовком */
+		display: flex;
+		flex-direction: column;
+		row-gap: 45px;
+		&-vacancies {
+			position: absolute;
+			left: 0;
+			top: calc(100% + 16px);
+			z-index: 200;
+			padding: 20px;
+			display: flex;
+			flex-direction: column;
+			gap: 10px;
+			border-radius: 15px;
+			border: 1px solid var(--darkest-blue-color);
+			background: var(--white-color);
+			max-width: 300px;
+			width: 100%;
+			cursor: default;
+			opacity: 0;
+			visibility: hidden;
+			transition: opacity 0.4s ease, visibility 0.4s ease;
+		}
 	}
 	&__item {
 		&-inner {
@@ -42,6 +90,24 @@
 			gap: 8px;
 			max-width: 786px;
 			width: 100%;
+		}
+		&-vacancy {
+			width: 100%;
+			padding: 4px 5px 4px 19px;
+			border-radius: 8px;
+			border: 1px solid rgba(0, 88, 147, 0.24);
+			background: var(--white-color);
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			cursor: pointer;
+			&-active {
+				& .hero {
+					&__icon-mark {
+						fill: var(--darker-blue-color);
+					}
+				}
+			}
 		}
 	}
 	&__title {
@@ -105,6 +171,13 @@
 				color: var(--blue-color);
 			}
 		}
+		&-vacancies {
+			text-align: center;
+			font-family: "Montserrat";
+			font-size: 18px;
+			font-weight: 400;
+			line-height: normal;
+		}
 	}
 	&__subtitle {
 		color: var(--black-color);
@@ -161,7 +234,6 @@
 		max-height: 105px;
 		height: 100%;
 		padding: 0 10px;
-		// overflow: hidden;
 		margin-top: 26px;
 		max-width: 250px;
 		width: 250px;
@@ -209,10 +281,17 @@
 				background: var(--darker-blue-color);
 			}
 		}
+		&-vacancy {
+			font-family: "Montserrat";
+			font-size: 14px;
+			line-height: normal;
+		}
 	}
 	&__interview {
 		margin-left: 12px;
 		max-width: 184px;
+		display: flex;
+		flex-direction: column;
 	}
 	&__period {
 		display: flex;
@@ -222,6 +301,8 @@
 		background: var(--dark-grey-color);
 		justify-content: space-between;
 		margin-bottom: 14px;
+		position: relative;
+		z-index: 150;
 	}
 	&__input {
 		&-text {
@@ -254,7 +335,63 @@
 			position: absolute;
 			bottom: 8px;
 			left: 50%;
-			transform: translateX(-50%);
+			transform: translateX(-45%);
+		}
+		&-vacancy {
+			position: absolute;
+			right: 12px;
+			top: 50%;
+			translate: 0 -50%;
+			transition: rotate 0.4s ease;
+		}
+		&-mark {
+			border-radius: 5px;
+			background: var(--mark-color);
+			fill: transparent;
+			& path {
+				transition: fill 0.4s ease;
+				fill: inherit;
+			}
+		}
+	}
+	&__button {
+		&-remove {
+			width: 100%;
+			padding: 5px 45px;
+			border-radius: 10px;
+			background: var(--darker-blue-color);
+			color: var(--white-color);
+			font-family: "Montserrat";
+			font-size: 12px;
+			font-weight: 500;
+			line-height: normal;
+			max-width: 146px;
+			margin: 0 auto;
+			transform: translateY(12px);
+		}
+	}
+	&__vacancies {
+		position: relative;
+		display: flex;
+		justify-content: center;
+		width: 300px;
+		border-radius: 10px;
+		border: 1px solid rgba(33, 117, 194, 0.55);
+		background: var(--white-color);
+		padding: 15px 37px 13px 12px;
+		cursor: pointer;
+		transition: border 0.4s ease;
+		&-opened {
+			border: 1px solid var(--darkest-blue-color);
+			& .hero {
+				&__icon-vacancy {
+					rotate: 180deg;
+				}
+				&__list-vacancies {
+					opacity: 1;
+					visibility: visible;
+				}
+			}
 		}
 	}
 }
